# Crackle

./: .gitattributes  .gitignore  LICENSE  PHASE4_RESULTS.md  PHASE4_WRITEUP.md  README.md  pyproject.toml  requirements.txt
crackle/: README.md  __init__.py  calibration.py  operators.py
reports/: Crackle_Final_Archive_and_OpenSource_20260605.md  Crackle_v1_5_Data_Pipeline_Audit_20260605.md  Crackle_v1_6_RealData_GPU_FinalPush_20260605.md  Crackle_v1_7_BigData_Run_20260605.md  Crackle_v1_8_DLR_Thesis_Correction_20260605.md  crackle_phase4_writeup.md  hetero_pinning_fullcl_final_readout_20260606.md  hetero_pinning_xdem_asset_audit_20260606.md  topo_branch_final_readout_20260611.md  topo_branch_writeup_20260612.md  topo_phase1_catalog_audit_20260611.md  topo_phase1_roi_matching_audit_20260611.md  topo_phase2_causal_onset_20260611.md  topo_phase2_hazard_20260611.md  topo_phase2_hazard_noise_20260612.md  topo_phase2_onset_noise_20260612.md  topo_phase2_track_a_20260611.md  topo_phase2_track_b_20260611.md  topo_phase2_track_c_20260611.md  topo_phase3_harb_audit_20260612.md  topo_phase3_realdata_20260611.md  topo_phase4_operator_headtohead_20260614.md  topo_phase4b_hazard_operator_20260614.md  topo_phase4c_solvedpd_hazard_20260614.md
scripts/: build_topo_catalog.py  fetch_datasets.py  generate_bond_dataset.py  generate_topo_dataset.py  phase0_topo_audit.py  topo_causal_onset.py  topo_graph_forecast.py  topo_hazard_ablation.py  topo_onset_noise.py  topo_operator_bench.py  topo_realdata_audit.py  topo_track_a_ntpp.py  topo_track_b_perslay.py  topo_track_c_bondgnn.py  (+2 more)
(+58 files in other folders)
