[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crackle-fracture-archive"
version = "0.1.0"
description = "Research archive for crack-event forecasting and DIC crack-tip localization experiments."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "7jycwjmbfn-eng"}]
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "pillow",
  "xgboost",
]

[project.optional-dependencies]
cuda = ["torch", "torchvision"]
ml = ["scikit-learn", "pandas", "pyarrow"]

[tool.setuptools.packages.find]
include = ["crackle*"]
